--- a/src/xbuild/SimulationFrame.form
+++ b/src/xbuild/SimulationFrame.form
@@ -390,8 +390,8 @@
         <Container class="org.jdesktop.swingx.JXPanel" name="jXPanel3">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="Option">
-                <Property name="tabTitle" type="java.lang.String" value="Option"/>
+              <JTabbedPaneConstraints tabName="Options">
+                <Property name="tabTitle" type="java.lang.String" value="Options"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
@@ -421,7 +421,7 @@
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                    <TitledBorder title="Option">
+                    <TitledBorder title="Options">
                       <Font PropertyName="font" name="Tahoma" size="11" style="1"/>
                     </TitledBorder>
                   </Border>
