--- a/src/xbuild/SimulationFrame.form
+++ b/src/xbuild/SimulationFrame.form
@@ -1126,7 +1126,7 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jXPanel15" min="-2" pref="672" max="-2" attributes="0"/>
+                                  <Component id="jXPanel15" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace pref="344" max="32767" attributes="0"/>
                               </Group>
                           </Group>
@@ -1156,25 +1156,23 @@
                           <Layout>
                             <DimensionLayout dim="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <EmptySpace max="32767" attributes="0"/>
-                                      <Component id="jXRadioGroup11" min="-2" max="-2" attributes="1"/>
-                                      <EmptySpace max="32767" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="1" attributes="0">
-                                          <Group type="102" alignment="1" attributes="0">
-                                              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-                                              <Component id="panelSoilWater" min="-2" max="-2" attributes="1"/>
-                                          </Group>
+                                  <Group type="102" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
                                           <Group type="102" alignment="0" attributes="0">
                                               <EmptySpace max="-2" attributes="0"/>
                                               <Component id="panelDate" min="-2" max="-2" attributes="1"/>
                                               <EmptySpace max="-2" attributes="0"/>
                                               <Component id="panelSoilTemperature" min="-2" max="-2" attributes="1"/>
                                           </Group>
+                                          <Group type="102" attributes="0">
+                                              <EmptySpace pref="11" max="32767" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="jXRadioGroup11" min="-2" max="-2" attributes="1"/>
+                                                  <Component id="panelSoilWater" min="-2" max="-2" attributes="1"/>
+                                              </Group>
+                                          </Group>
                                       </Group>
-                                      <EmptySpace max="32767" attributes="0"/>
+                                      <EmptySpace pref="10" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                             </DimensionLayout>
@@ -1400,7 +1398,7 @@
                                           </Group>
                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="1" attributes="0">
-                                              <Component id="txtPH2OU" alignment="1" pref="272" max="32767" attributes="1"/>
+                                              <Component id="txtPH2OU" alignment="1" pref="213" max="32767" attributes="1"/>
                                               <Component id="txtPH2OD" alignment="1" max="32767" attributes="1"/>
                                               <Component id="txtPH2OL" alignment="1" max="32767" attributes="1"/>
                                           </Group>
