--- a/src/xbuild/FieldFrame.form
+++ b/src/xbuild/FieldFrame.form
@@ -760,7 +760,7 @@
                 <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                   <ComponentRef name="wstaTypeGroup"/>
                 </Property>
-                <Property name="label" type="java.lang.String" value="WTH"/>
+                <Property name="text" type="java.lang.String" value="Observed (WTH)"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JRadioButton" name="rdGen">
@@ -768,7 +768,7 @@
                 <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                   <ComponentRef name="wstaTypeGroup"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Gen (WTG)"/>
+                <Property name="text" type="java.lang.String" value="Generated (WTG)"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JRadioButton" name="rdClimate">
