--- a/src/xbuild/SetupFrame.form
+++ b/src/xbuild/SetupFrame.form
@@ -3,6 +3,9 @@
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="iconImage" type="java.awt.Image" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+      <Connection code="Variables.getIconImage(getClass())" type="code"/>
+    </Property>
     <Property name="startPosition" type="org.jdesktop.swingx.JXFrame$StartPosition" editor="org.netbeans.modules.form.editors.EnumEditor">
       <Value id="CenterInScreen"/>
     </Property>
